# regression-pilot

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/skills/regression-pilot-dev/: SKILL.md
.claude/skills/regression-pilot-dev/references/: ci-fixes.md  conventions.md  dashboard.md  database.md
.github/workflows/: ci.yml
adapters/: base.py  playwright_adapter.py  selenium_adapter.py
agent/: cli.py  detector.py  dom_inspector.py  fix_generator.py  git_agent.py  jira_agent.py  models.py  orchestrator.py  server.py  test_runner.py
agent/db/: __init__.py  engine.py  models.py  repository.py
alembic/: env.py
alembic/versions/: 0001_initial.py
config/: settings.py
dashboard/: index.html  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: Charts.jsx  ConfidenceBar.jsx  HealDrawer.jsx  MetricCard.jsx  SelectorDiff.jsx  StatusBadge.jsx
dashboard/src/hooks/: useHeals.js
dashboard/src/lib/: api.js
tests/: test_detector.py
