[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regression-pilot"
version = "0.1.0"
description = "AI agent that self-heals broken UI tests for Playwright and Selenium"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["ai", "testing", "playwright", "selenium", "self-healing", "qa"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "anthropic>=0.28.0",
    "playwright>=1.44.0",
    "selenium>=4.21.0",
    "webdriver-manager>=4.0.1",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
]

[project.scripts]
regression-pilot = "agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent", "adapters", "config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
